Added new formula able to change the colors according to the theme: dark or light
Signed-off-by: Charles Moulliard <cmoulliard@ibm.com>