@@ -4,6 +4,7 @@
 package dev.snowdrop;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static java.lang.Math.abs;
 
@@ -45,12 +46,34 @@ public class JBossLoggingApp {
 
     public static void main(String[] args) {
         try {
-            for (int num: Arrays.asList(0,1)) {
+            // Don't use darken values > 0 as the result is really dark ...
+            for (int num: List.of(0)) {
                 darken = num;
+
                 System.out.println("\n***********************************************************************************");
-                System.out.printf("The jboss way to calculate RGB colors for messages to log using darken: %d\n", darken);
+                System.out.printf("Original jboss RGB calculation using darken: %d\n", darken);
                 System.out.println("*************************************************************************************");
                 printMessages();
+
+                System.out.println("\n***********************************************************************************");
+                System.out.printf("New RGB calculation for: Light Theme using darken: %d\n", darken);
+                System.out.println("*************************************************************************************");
+                printMessages2(false);
+
+                System.out.println("\n***********************************************************************************");
+                System.out.printf("New RGB calculation for: Dark Theme using darken: %d\n", darken);
+                System.out.println("*************************************************************************************");
+                printMessages2(true);
+
+                System.out.println("\n***********************************************************************************");
+                System.out.printf("Alternative RGB calculation for: Light Theme using darken: %d\n", darken);
+                System.out.println("*************************************************************************************");
+                printMessages2Alt(false);
+
+                System.out.println("\n***********************************************************************************");
+                System.out.printf("Alternative RGB calculation for: Dark Theme using darken: %d\n", darken);
+                System.out.println("*************************************************************************************");
+                printMessages2Alt(true);
             }
         } catch (Exception e) {
             e.printStackTrace();
@@ -62,6 +85,44 @@ public class JBossLoggingApp {
             StringBuilder target = new StringBuilder();
 
             calculateRGB((int) JBossLoggingApp.class.getDeclaredField(LEVEL + "_LEVEL").get(null));
+
+            startColor(target, 38, true, r,g,b);
+            target.append(LEVEL);
+            target.append(String.format(" - RGB: (%d, %d, %d)", r, g, b));
+            endColor(target, MODE);
+
+            startColor(target, 38, true, 176, 208, 176);
+            target.append(" log message.");
+            endColor(target, MODE);
+
+            System.out.printf("%s\n", target);
+        }
+    }
+
+    static void printMessages2(boolean darkTheme) throws NoSuchFieldException, IllegalAccessException {
+        for (String LEVEL: Arrays.asList("TRACE","DEBUG","INFO","WARN","ERROR", "FATAL")) {
+            StringBuilder target = new StringBuilder();
+
+            calculateRGB2((int) JBossLoggingApp.class.getDeclaredField(LEVEL + "_LEVEL").get(null), darkTheme);
+
+            startColor(target, 38, true, r,g,b);
+            target.append(LEVEL);
+            target.append(String.format(" - RGB: (%d, %d, %d)", r, g, b));
+            endColor(target, MODE);
+
+            startColor(target, 38, true, 176, 208, 176);
+            target.append(" log message.");
+            endColor(target, MODE);
+
+            System.out.printf("%s\n", target);
+        }
+    }
+
+    static void printMessages2Alt(boolean darkTheme) throws NoSuchFieldException, IllegalAccessException {
+        for (String LEVEL: Arrays.asList("TRACE","DEBUG","INFO","WARN","ERROR", "FATAL")) {
+            StringBuilder target = new StringBuilder();
+
+            calculateRGB2Alt((int) JBossLoggingApp.class.getDeclaredField(LEVEL + "_LEVEL").get(null), darkTheme);
 
             startColor(target, 38, true, r,g,b);
             target.append(LEVEL);
@@ -94,5 +155,86 @@ public class JBossLoggingApp {
         r = ((level < 300 ? 0 : (level - 300) * (255 - SATURATION) / 300) + SATURATION) >>> darken;
         g = ((300 - abs(level - 300)) * (255 - SATURATION) / 300 + SATURATION) >>> darken;
         b = ((level > 300 ? 0 : level * (255 - SATURATION) / 300) + SATURATION) >>> darken;
+    }
+
+    /**
+     * Enhanced RGB calculation method that provides better visibility for dark themes.
+     * This method ensures TRACE level has sufficient brightness while maintaining
+     * good color differentiation across all log levels.
+     * <p>
+     * Key improvements:
+     * - Minimum brightness threshold to ensure visibility on dark backgrounds
+     * - Better color distribution across the spectrum
+     * - Optional dark theme mode with inverted brightness scaling
+     */
+    static void calculateRGB2(int LEVEL, boolean darkTheme) {
+        final int level = Math.max(Math.min(LEVEL, LARGEST_LEVEL), SMALLEST_LEVEL) - SMALLEST_LEVEL;
+
+        // Base brightness - higher minimum for dark themes
+        int minBrightness = darkTheme ? 120 : 60;
+        int maxBrightness = darkTheme ? 255 : 200;
+
+        // Calculate hue based on level (0-600 range mapped to color spectrum)
+        float hue = level / 600.0f;
+
+        // For dark themes, boost saturation and brightness for lower levels
+        float saturation = darkTheme ? 0.8f : 0.7f;
+        float brightness;
+
+        if (darkTheme) {
+            // In dark mode, make TRACE brighter than other levels for visibility
+            brightness = level <= 100 ? 0.9f : 0.6f + (1.0f - hue) * 0.3f;
+        } else {
+            // In light mode, use traditional scaling
+            brightness = 0.4f + hue * 0.5f;
+        }
+
+        // Convert HSB to RGB
+        int rgb = java.awt.Color.HSBtoRGB(hue, saturation, brightness);
+
+        r = Math.min(Math.max((rgb >> 16) & 0xFF, minBrightness), maxBrightness) >>> darken;
+        g = Math.min(Math.max((rgb >> 8) & 0xFF, minBrightness), maxBrightness) >>> darken;
+        b = Math.min(Math.max(rgb & 0xFF, minBrightness), maxBrightness) >>> darken;
+    }
+
+    /**
+     * Alternative RGB calculation with fixed bright colors for dark themes.
+     * Uses predefined color palettes optimized for terminal visibility.
+     */
+    static void calculateRGB2Alt(int LEVEL, boolean darkTheme) {
+        // Predefined color palettes for better terminal visibility
+        int[][] lightThemeColors = {
+            {128, 0, 128},   // TRACE - Purple
+            {0, 128, 255},   // DEBUG - Blue
+            {0, 128, 0},     // INFO - Green
+            {255, 165, 0},   // WARN - Orange
+            {255, 0, 0},     // ERROR - Red
+            {128, 0, 0}      // FATAL - Dark Red
+        };
+
+        int[][] darkThemeColors = {
+            {200, 150, 255}, // TRACE - Bright Purple
+            {100, 200, 255}, // DEBUG - Bright Blue
+            {150, 255, 150}, // INFO - Bright Green
+            {255, 200, 100}, // WARN - Bright Orange
+            {255, 100, 100}, // ERROR - Bright Red
+            {255, 50, 50}    // FATAL - Bright Red
+        };
+
+        int colorIndex;
+        switch (LEVEL) {
+            case 400: colorIndex = 0; break;  // TRACE
+            case 500: colorIndex = 1; break;  // DEBUG
+            case 800: colorIndex = 2; break;  // INFO
+            case 900: colorIndex = 3; break;  // WARN
+            case 1000: colorIndex = 4; break; // ERROR
+            case 1100: colorIndex = 5; break; // FATAL
+            default: colorIndex = 0;
+        }
+
+        int[][] palette = darkTheme ? darkThemeColors : lightThemeColors;
+        r = palette[colorIndex][0] >>> darken;
+        g = palette[colorIndex][1] >>> darken;
+        b = palette[colorIndex][2] >>> darken;
     }
 }
